# ACLS_python

./: CMakeLists.txt  README.md  setup.py
examples/: ex_1.csv  ex_2.csv
lib/: Eigen3  pybind11
lib/RGD/: CMakeLists.txt  RGD_core.cpp
lib/RGD/include/: RGD_core.h
src/ACLS/: RGD_bindings.cpp
src/ACLS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
